# Pairly

./: .directory  .gitignore  CMakeLists.txt  README.md  requirements.txt  send_data_script.py  timetest.py
Air/: Db.py  add_fake_data.py  apps.py  mocks.py  routing.py  tests.py
Air/charts/: forms.py  urls.py  views.py
Air/data/: consumers.py  cryptocore.py  data_models.py  requests.py  routing.py  serializers.py  throttling.py  urls.py  views.py
Air/devices/: forms.py  models.py  urls.py  views.py
Air/index/: urls.py  views.py
Air/migrations/: 0003_auto_20181210_1547.py  0004_auto_20181210_1648.py
Air/static/Air/css/: map.css
Air/static/Air/js/: charts.js  map.js
Air/static/Air/js/charts/: chart_map.js  charts.js
Air/static/Air/js/device/: device_map.js
Air/static/Air/js/utils/: HttpClient.js  chart_utils.js  map_utils.js
Air/static/charts/: HttpClient.js
Air/templates/: base.html
Air/templates/charts/: charts.html  index.html
Air/templates/data/: test.html
Air/templates/devices/: device_info.html  device_list.html  new_device.html
Air/templates/index/: home.html
Air/templates/users/: login.html  profile.html  signup.html
Air/users/: models.py  urls.py  views.py
Pailry/: .directory  manage.py  settings.py
Pailry/Air/: admin.py  snippets
Pailry/Air/data/: urls.py
Pailry/Air/devices/: fields.py  forms.py  models.py  urls.py  validators.py  views.py
Pailry/Air/migrations/: 0001_initial.py  0002_auto_20181203_2010.py
Pailry/Air/templates/: base.html
Pailry/Air/templates/devices/: device_list.html
Pailry/Air/users/: forms.py  views.py
Pailry/Pailry/: wsgi.py
Pairly/: urls.py
PairlyDB/: CMakeLists.txt  dbInit.js  test.py
PairlyDB/include/: data-factory-mongo.h  data-factory.h  device.h  pairly.h
PairlyDB/python-lib/: pairly-db.cpp
PairlyDB/src/: data-factory-mock.cpp  data-factory-mongo.cpp  pairly.cpp
PairlyDB/testBin/: test_PairlyDB
include/: data-factory-mock.h  data-factory-mongo.h  data-factory.h  device.h  pairly-exceptions.h  pairly.h
src/: data-factory-mock.cpp  data-factory-mongo.cpp  pairly.cpp
tests/: test_PairlyDB.cpp
